--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -8,5 +8,6 @@
     <h1>Product: {{ object.name }}</h1>
     <p>Description: {{ object.description }}</p>
     <p>Price: {{ object.price }}</p>
+    <img src="{{ object.image.url }}" class="img-fluid" />
 </body>
 </html>
