--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -5,9 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Product: {{ object.name }}</h1>
-    <p>Description: {{ object.description }}</p>
-    <p>Price: {{ object.price }}</p>
-    <img src="{{ object.image.url }}" class="img-fluid" />
+        <h1>Product: {{ object.name }}</h1>
+        <p>Description: {{ object.description }}</p>
+        <p>Price: {{ object.price }}</p>
+    {% if object.image %}
+        <img src="{{ object.image.url }}" class="img-fluid" />
+    {% endif %}
 </body>
 </html>
