--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -8,7 +8,8 @@
 <h1>Products</h1>
 <ul>
     {% for product in object_list %}
-        <li>{{ product.name }}: ${{ product.price }}</li>
+        <li><a href="{{ product.get_absolute_url }}">{{ product.name }}</a>: ${{ product.price }}</li>
+{#        <li>{{ product.name }}: ${{ product.price }}</li>#}
     {% empty %}
         <li>No articles yet.</li>
     {% endfor %}
