--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
+
 <head>
-    <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
@@ -11,5 +13,7 @@
     {% if object.image %}
         <img src="{{ object.image.url }}" class="img-fluid" />
     {% endif %}
+
+{% endblock %}
 </body>
 </html>
