--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,9 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load static %}
+
+
+{% block content %}
+
 <head>
-    <meta charset="UTF-8">
     <title>Products</title>
 </head>
+
+
 <body>
 <h1>Products</h1>
 <ul>
@@ -14,5 +19,7 @@
         <li>No articles yet.</li>
     {% endfor %}
     </ul>
+
+{% endblock %}
 </body>
 </html>
