--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -4,22 +4,35 @@
 
 {% block content %}
 
-<head>
-    <title>Products</title>
-</head>
+    <head>
+        <title>Products</title>
+    </head>
 
 
-<body>
-<h1>Products</h1>
-<ul>
-    {% for product in object_list %}
-        <li><a href="{{ product.get_absolute_url }}">{{ product.name }}</a>: ${{ product.price }}</li>
-{#        <li>{{ product.name }}: ${{ product.price }}</li>#}
-    {% empty %}
-        <li>No articles yet.</li>
-    {% endfor %}
-    </ul>
+    <body>
+    <h1>Products</h1>
+    <ul>
+
+    <div class="container">
+        <div class="row">
+            {% for product in object_list %}
+                <div class="col">
+                {% include 'products/snippets/card.html' with instance=product %}
+                {# <li><a href="{{ product.get_absolute_url }}">{{ product.name }}</a>: ${{ product.price }}</li>#}
+                {# <li>{{ product.name }}: ${{ product.price }}</li>#}
+                </div>
+            {% empty %}
+        </div>
+        </div>
+            <li>No articles yet.</li>
+        {% endfor %}
+        </ul>
+
+
+    </body>
 
 {% endblock %}
-</body>
+
 </html>
+
+
