update base.html by adding urls navigation

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,12 @@
   <body>
 
   <!-- NAVBAR-->
+  {% url 'home_page' as home_page_url %}
+  {% url 'product-list' as product_list_url %}
+{#  {% url 'login' as login_url %}#}
+{#  {% url 'register' as register_url %}#}
+{#  {% url 'logout' as logout_url %}#}
+
     <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
       <div class="container">
         <a href="#" class="navbar-brand">
@@ -29,10 +35,33 @@
 
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="{% url 'home_page' %}" class="nav-link">Home <span class="sr-only">(current)</span></a></li>
+
+            <li class="nav-item {% if request.path == home_page_url %} active {% endif %}">
+              <a href="{{ home_page_url }}" class="nav-link">Home <span class="sr-only">(current)</span></a>
+            </li>
+
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="{% url 'product-list' %}" class="nav-link">Products</a></li>
+
+            <li class="nav-item {% if request.path == product_list_url %} active {% endif %}">
+              <a href="{% url 'product-list' %}" class="nav-link">Products</a>
+            </li>
+
             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+
+{#            {% if request.user.is_authenticated %}#}
+{#            <li class="nav-item {% if request.path == login_url %} active {% endif %}">#}
+{#              <a href="{{ login_url }}" class="nav-link">Logout</a>#}
+{#            </li>#}
+{#            {% else %}#}
+{#            <li class="nav-item {% if request.path == register_url %} active {% endif %}">#}
+{#              <a href="{{ register_url }}" class="nav-link">Register</a>#}
+{#            </li>#}
+{#            <li class="nav-item {% if request.path == login_url %} active {% endif %}">#}
+{#              <a href="{{ login_url }}" class="nav-link">Login</a>#}
+{#            </li>#}
+{#            {% endif %}#}
+
+
           </ul>
             <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
