--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -7,13 +7,18 @@
     <title>Title</title>
 </head>
 <body>
-        <h1>Product: {{ object.name }}</h1>
-        <p>Description: {{ object.description }}</p>
-        <p>Price: {{ object.price }}</p>
-    {% if object.image %}
-        <img src="{{ object.image.url }}" class="img-fluid" />
-    {% endif %}
-
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>Product: {{ object.name }}</h1>
+                <p>Description: {{ object.description|linebreaks }}</p>
+                <p>Price: {{ object.price }}</p>
+                    {% if object.image %}
+                        <img src="{{ object.image.url }}" class="img-fluid" />
+                    {% endif %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
 </body>
 </html>
