--- a/products/templates/products/snippets/card.html
+++ b/products/templates/products/snippets/card.html
@@ -7,7 +7,7 @@
 
   <div class="card-body">
     <h5 class="card-title">{{ instance.name }}</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">{{ instance.description|truncatewords:15 }}</p>
     <a href="{{ product.get_absolute_url }}" class="btn btn-primary">View</a>
   </div>
 </div>
