--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -20,13 +20,21 @@
                 {% include 'products/snippets/card.html' with instance=product %}
                 {# <li><a href="{{ product.get_absolute_url }}">{{ product.name }}</a>: ${{ product.price }}</li>#}
                 {# <li>{{ product.name }}: ${{ product.price }}</li>#}
-                </div>
+                {% if forloop.counter|divisibleby:3 %}
+                </div></div>
+                    <div class="row">
+                        <div class="col-12">
+                        <hr/>
+                        </div>
+                {% else %}
+                    </div>
+                {% endif %}
             {% empty %}
         </div>
-        </div>
-            <li>No articles yet.</li>
-        {% endfor %}
-        </ul>
+    </div>
+                <li>No articles yet.</li>
+            {% endfor %}
+    </ul>
 
 
     </body>
