--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 {#  {% url 'register' as register_url %}#}
 {#  {% url 'logout' as logout_url %}#}
 
-    <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+    <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm mb-3">
       <div class="container">
         <a href="#" class="navbar-brand">
           <!-- Logo Image -->
